# greeting-e2e

./: Cargo.toml  README.md  test-config.toml
src/: api.rs  greeting_api.rs  greeting_api_service.rs  greeting_e2e.rs  greeting_receiver.rs  main.rs  message_generators.rs  ollama_msg_generator.rs  test_runner.rs
