[package]
name = "greeting-e2e"
version = "0.1.0"
edition = "2024"

[dependencies]
#clap = { version = "4.5.53", features = ["derive"] }
clio = "0.3.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.20", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
validator = "0.20.0"
validator_derive = "0.20.0"
derive_more = { version = "2.0.1", features = ["full"]}
anyhow = "1.0.100"
confy = "2.0"
clap = { version = "4.5.49", features = ["derive", "env"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.19.0", features = ["v7"] }
rand = "0.8.5"
indicatif = "0.18.3"
indicatif-log-bridge = "0.2.3"
env_logger = "0.11.8"
ollama-rs = "0.3.3"
futures = "0.3.31"

[dev-dependencies]
wiremock = "0.5"
serde_json = "1"
